Updating Actions to not rebuild on non needed files.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,14 @@
 name: 'Run Tests'
 
-on: [push, pull_request]
+on: 
+  push:
+    paths:
+      - src/**
+      - makefile
+  pull_request:
+    paths:
+      - src/**
+      - makefile
 
 jobs:
   run-test:
