--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   run-test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Install Nix 
         uses: cachix/install-nix-action@v18 
